working version, should be fine 🖍️ <- these are fine as heck 🖍️🖍️🖍️